Fixed spacing between card number digits at the end and only allowed 16 digits for the card. Fixed card month to add 0 in front of single digit months

--- a/styles.css
+++ b/styles.css
@@ -244,7 +244,7 @@ input[type="number"] {
 
 button {
   height: 55px;
-  margin-top: 15px;
+  margin-top: 5px;
   border: none;
   border-radius: 7px;
   background: var(--color-dark-purple);
